<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lgdx_rplidar_c1_ros2</name>
  <version>1.0.0</version>
  <description>Lyrical RPLIDAR C1 ROS 2 wrapper for LGDXRobot2</description>
  <maintainer email="info@bristolgram.uk">LGDXRobot</maintainer>
  <author email="info@bristolgram.uk">LGDXRobot</author>
  <url type="website">https://lgdxrobot.uk/lgdxrobot2</url>
  <url type="repository">https://gitlab.com/lgdxrobotics/lgdxrobot2-rplidar-c1</url>
  <url type="bugtracker">https://gitlab.com/lgdxrobotics/lgdxrobot2-rplidar-c1/-/issues</url>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>boost</buildtool_depend>
  <buildtool_depend>rclcpp</buildtool_depend>
  <buildtool_depend>rclcpp_components</buildtool_depend>
  <buildtool_depend>sensor_msgs</buildtool_depend>

  <exec_depend>boost</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
